src/objects/Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction_1_5__c</fullName>
        <label>Overall Satisfaction(1-5)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Which rep did you work with?</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>